--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="./src/favicon.ico">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <link rel="apple-touch-startup-image" href="./monkey.png">
+    <link rel="manifest" href="manifest.json">
     <title>React App</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div data-root></div>
   </body>
 </html>
