--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="./src/favicon.ico">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="apple-touch-startup-image" href="./monkey.png">
-    <link rel="manifest" href="manifest.json">
-    <title>React App</title>
+    <link rel="apple-touch-startup-image" href="static/images/monkey.png">
+    <title>Progress4Primates</title>
   </head>
   <body>
     <div data-root></div>
